--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/jquery.js": "/js/jquery.js",
+    "/js/sweetalert2.all.min.js": "/js/sweetalert2.all.min.js"
 }
